исправила блок с текстом

--- a/main.css
+++ b/main.css
@@ -770,8 +770,7 @@ body {
   align-self: flex-end;
   justify-content: center;
   width: 305px;
-  height: 195px;
-  background-color: #FAE8E4;
+  background-color: #fae8e4;
   margin-right: 26px;
   box-sizing: border-box;
   z-index: 1;
